# homelab

.devcontainer/: compose.yml
.devcontainer/ansible/: Dockerfile  aqua.yaml  devcontainer.json  pyproject.toml
.devcontainer/terraform/: Dockerfile  aqua.yaml  devcontainer.json  postCreateCommand.sh  starship.toml
.github/: copilot-instructions.md
.github/workflows/: devcontainer_ci.yaml  github_actions_workflow_ci.yaml
ansible/: .envrc_common  .envrc_poc  Taskfile.yml
ansible/inventories/poc/: hosts.ini
terraform/: .gitignore  Taskfile.yml
terraform/environments/poc/: outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/compute/: main..tf  variables.tf
