[project]
name = "ansible-workspace"
version = "0.1.0"
description = "Development and execution environment for Ansible"
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
    "ansible>=13.3.0",
    "argcomplete>=3.6.3",
    "passlib>=1.7.4",
]

[dependency-groups]
dev = [
    "ansible-lint>=26.1.1",
]
